# Simple-Planning

./: .gitignoge  .gitignore  package.xml
launch/: planning.launch.py
motion_planning/: CMakeLists.txt
motion_planning/launch/: planning.launch.py
src/: car.cpp  points.cpp  sine_path.cpp
